Scrape button, title, news, and feautured image is rendered.

--- a/Mission_to_Mars/templates/index.html
+++ b/Mission_to_Mars/templates/index.html
@@ -13,15 +13,17 @@
   <div class="container-fluid">
     <div class="jumbotron text-center">
       <h1>Mission to Mars</h1>
-      <p>Info associated with red planet Mars</p>
+      <p>Info about Mars</p>
       <p><a class="btn btn-primary btn-lg" href="/scrape" role="button">Scrape New Data</a></p>
     </div>
-    <!-- place holders for imagea and other data -->
-    <img src="{{ vacation.sloth_img }}" alt="Sloth">
-    <h2>The typical weather in Costa Rica is:</h2>
-    <h3>Max Temp: {{ vacation.max_temp }}</h3>
-    <h3>Min Temp: {{ vacation.min_temp }}</h3>
+    <!-- place holders for image and other data -->
+    <h2>Latest Mars News</h2>
+    <h3> {{ m_data.content_title }} </h3>
+    <h5> {{ m_data.news_p }} </h5>
+    <h2>Featured Mars Image</h2>
+    <img src = "{{ m_data.featured_image_url }}" />
   </div>
-  </div>
+
 </body>
+
 </html>
