fixed the title and hems_url

--- a/Mission_to_Mars/templates/index.html
+++ b/Mission_to_Mars/templates/index.html
@@ -1,3 +1,4 @@
+7:33
 <!DOCTYPE html>
 <html lang="en">
 
@@ -20,23 +21,28 @@
     <h2>Latest Mars News</h2>
     <h3> {{ m_data.content_title }} </h3>
     <h5> {{ m_data.news_p }} </h5>
-    <h2>Featured Mars Image</h2>
-    <img src="{{ m_data.featured_image_url }}" />
+<div class="row">
+   <div class="col-md-8">
+<img src="{{ m_data.featured_image_url }}" />
+        </div>
+
+        <div class="col-md-4">
     <h2>Mars Facts</2>
       <table>{{ m_data.mars_facts|safe }}</table>
-
+        </div>
+</div>
       <h3 style="padding-top:30px; text-align: center;">Mars Hemispheres</h3>
-
+    <div class = "row">
       {% for hemisphere in m_data.hemisphere_image_urls %}
-      <h3>{{hemisphere.title}}</h3>
-      <img src="{{hemisphere.img_url}}" alt="...">
+    <div class = "col-md-3">
+      <div>
+      <img class= "img-responsive" src="{{hemisphere.img_url}}" alt="..."> 
+      <h5>{{hemisphere.title}}</h5>
+    </div> 
 
-
-
+    </div> 
       {% endfor %}
-
-
-
+    </div>
   </div>
 
 </body>
